--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -25,8 +25,8 @@
                     <td>{{ forloop.counter }}</td>
                     <td><a href="{% url 'bookmark:detail' bookmark.id %}">{{ bookmark.site_name }}</a></td>
                     <td><a href="{{ bookmark.url }}" target="_blank">{{ bookmark.url }}</a></td>
-                    <td><a href="#" class="btn btn-success btn-sm">Modify</a></td>
-                    <td><a href="#" class="btn btn-danger btn-sm">Delete</a></td>
+                    <td><a href="{% url 'bookmark:update' bookmark.id %}" class="btn btn-success btn-sm">Modify</a></td>
+                    <td><a href="{% url 'bookmark:delete' bookmark.id %}" class="btn btn-danger btn-sm">Delete</a></td>
                 </tr>
             {% endfor %}
 
