--- a/bookmark/templates/bookmark/bookmark_confirm_delete.html
+++ b/bookmark/templates/bookmark/bookmark_confirm_delete.html
@@ -1,4 +1,10 @@
-<form action="" method="post">
-    {% csrf_token %}
-    <input type="submit" value="제거" class="btn btn-danger">
-</form>
+{% extends 'base.html' %}
+
+{% block title %} Confirm Delete {% endblock %}
+
+{% block content %}
+    <form action="" method="post">
+        {% csrf_token %}
+        <input type="submit" value="제거" class="btn btn-danger">
+    </form>
+{% endblock %}
