--- a/bookmark/templates/bookmark/bookmark_create.html
+++ b/bookmark/templates/bookmark/bookmark_create.html
@@ -1,5 +1,11 @@
+{% extends 'base.html' %}
+
+{% block title %}Bookmark 생상{% endblock %}
+{% block content %}
 <form action="" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="추가" class="btn btn-info btn-sm">
 </form>
+{% endblock %}
+
