--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -1,38 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>북마크</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}북마크{% endblock %}
+
+{% block content %}
+
     <div class="btn-group">
         <a href="{% url 'bookmark:add' %}" class="btn btn-info">북마크 추가</a>
     </div>
     <p></p>
     <table class="table">
         <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">site</th>
-                <th scope="col">URL</th>
-                <th scope="col">Modify</th>
-                <th scope="col">Delete</th>
-            </tr>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">site</th>
+            <th scope="col">URL</th>
+            <th scope="col">Modify</th>
+            <th scope="col">Delete</th>
+        </tr>
         </thead>
         <tbody>
-            {% for bookmark in bookmark_list %}
-                <tr>
-                    <td>{{ forloop.counter }}</td>
-                    <td><a href="{% url 'bookmark:detail' bookmark.id %}">{{ bookmark.site_name }}</a></td>
-                    <td><a href="{{ bookmark.url }}" target="_blank">{{ bookmark.url }}</a></td>
-                    <td><a href="{% url 'bookmark:update' bookmark.id %}" class="btn btn-success btn-sm">Modify</a></td>
-                    <td><a href="{% url 'bookmark:delete' bookmark.id %}" class="btn btn-danger btn-sm">Delete</a></td>
-                </tr>
-            {% endfor %}
+        {% for bookmark in bookmark_list %}
+            <tr>
+                <td>{{ forloop.counter }}</td>
+                <td><a href="{% url 'bookmark:detail' bookmark.id %}">{{ bookmark.site_name }}</a></td>
+                <td><a href="{{ bookmark.url }}" target="_blank">{{ bookmark.url }}</a></td>
+                <td><a href="{% url 'bookmark:update' bookmark.id %}" class="btn btn-success btn-sm">Modify</a></td>
+                <td><a href="{% url 'bookmark:delete' bookmark.id %}" class="btn btn-danger btn-sm">Delete</a></td>
+            </tr>
+        {% endfor %}
 
         </tbody>
     </table>
-
-
-</body>
-</html>
+{% endblock %}
