테스트 케이스 작성

--- a/bookmark/templates/bookmark/bookmark_detail.html
+++ b/bookmark/templates/bookmark/bookmark_detail.html
@@ -3,6 +3,10 @@
 {% block title %}Detail{% endblock %}
 
 {% block content %}
-    <p>{{ bookmark.site_name }}</p>
-    <p>{{ bookmark.url  }}</p>
+    {% if bookmark %}
+        <p>{{ bookmark.site_name }}</p>
+        <p>{{ bookmark.url  }}</p>
+        {% else %}
+        <p>no bookmark data</p>
+    {% endif %}
 {% endblock %}
